grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.use_declaration,
          $.catalog_contribution,
          $.enum_definition,
          $.protocol_definition,
          $.extension_definition,
          $.structure_definition,
          $.function_definition,
          $.test_definition,
          $.foreign_function_declaration,
          $.native_function_declaration,
          $.native_resource_declaration,
          $.public_declaration,
          $.package_declaration,
          $.module_declaration,
          $.local_declaration,
        ),
      ),

    foreign_function_declaration: ($) =>
      seq(
        "let",
        field("name", $.identifier),
        "=",
        field("interop", "C"),
        ".",
        field("function", "function"),
        field("signature", $.type_argument_list),
        field("arguments", seq("(", optional($._invocation_arguments), ")")),
        choice(";", $._automatic_semicolon),
      ),

    use_declaration: ($) =>
      seq(
        optional(field("visibility", "public")),
        "use",
        choice(
          prec(1, seq(
            field("declaration", choice($.qualified_name, $.identifier)),
            optional(seq("as", field("alias", $.identifier))),
          )),
          seq(
            field("type", $.type),
            "as",
            field("alias", $.identifier),
          ),
        ),
        choice(";", $._automatic_semicolon),
      ),

    public_declaration: ($) =>
      seq(
        "public",
        choice(
          $.enum_definition,
          $.protocol_definition,
          $.structure_definition,
          $.function_definition,
          $.native_function_declaration,
          $.native_resource_declaration,
        ),
      ),

    local_declaration: ($) =>
      seq(
        "local",
        choice(
          $.enum_definition,
          $.protocol_definition,
          $.structure_definition,
          $.function_definition,
          $.native_function_declaration,
          $.native_resource_declaration,
        ),
      ),

    enum_definition: ($) =>
      seq(
        "enum",
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        optional(seq(":", field("raw_type", $.raw_enum_type))),
        "{",
        repeat1($.enum_variant),
        "}",
      ),

    enum_variant: ($) =>
      seq(
        field("name", $._contextual_variant_name),
        optional(
          field(
            "associated_types",
            seq("(", $.type, repeat(seq(",", $.type)), ")"),
          ),
        ),
        optional(seq("=", field("raw_value", choice($.signed_integer_literal, $.string_literal)))),
        choice(";", $._automatic_semicolon),
      ),

    qualified_name: ($) =>
      seq($.identifier, repeat1(seq(".", $.identifier))),

    structure_definition: ($) =>
      seq(
        choice(
          seq(optional(field("structure_modifier", "static")), "struct"),
          seq(optional(field("class_modifier", choice("static", "intrinsic", "nocopy"))), "class"),
        ),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        optional(
          seq(
            ":",
            field(
              "supertypes",
              seq($.named_type, repeat(seq(",", $.named_type))),
            ),
          ),
        ),
        "{",
        repeat(
          choice(
            seq(
              optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))),
              $.structure_definition,
            ),
            seq(
              optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))),
              optional(field("static", "static")),
              $.structure_field,
            ),
            seq(optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))), $.constructor_definition),
            $.drop_definition,
            seq(
              optional(field("override", "override")),
              optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))),
              optional(field("static", "static")),
              $.function_definition,
            ),
          ),
        ),
        "}",
      ),

    structure_field: ($) =>
      seq(
        field("mutability", choice("let", "var")),
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(seq("=", field("default", $.expression))),
        choice(
          choice(";", $._automatic_semicolon),
          field("accessors", $.property_accessor_block),
        ),
      ),

    property_accessor_block: ($) =>
      seq("{", repeat1(choice($.property_getter, $.property_setter)), "}"),

    property_getter: ($) =>
      seq(field("kind", "get"), field("body", $.block)),

    property_setter: ($) =>
      seq(
        field("kind", "set"),
        "(",
        field("name", $.identifier),
        ")",
        field("body", $.block),
      ),

    function_definition: ($) =>
      seq(
        "func",
        field("name", choice($._contextual_member_name, $.operator_function_name)),
        optional(field("type_parameters", $.type_parameter_list)),
        $.parameter_list,
        optional(field("return_type", choice($.void_type, $.borrowed_return_type, $.type))),
        choice(field("body", $.block), choice(";", $._automatic_semicolon)),
      ),

    native_function_declaration: ($) =>
      seq(
        field("native", alias("native", $.identifier)),
        "func",
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        $.parameter_list,
        field("return_type", choice($.void_type, $.borrowed_return_type, $.type)),
        choice(";", $._automatic_semicolon),
      ),

    native_resource_declaration: ($) =>
      seq(
        field("native", alias("native", $.identifier)),
        field("resource", alias("resource", $.identifier)),
        field("name", $.identifier),
        "{",
        "drop",
        field("destructor", $.identifier),
        choice(";", $._automatic_semicolon),
        "}",
      ),

    builtin_type: (_) =>
      choice(
        "int",
        "int8",
        "int16",
        "int32",
        "int64",
        "uint",
        "uint8",
        "uint16",
        "uint32",
        "uint64",
        "float",
        "float32",
        "float64",
        "bool",
        "str",
      ),
    type_parameter_list: ($) =>
      seq(
        "<",
        $.type_parameter,
        repeat(seq(",", $.type_parameter)),
        ">",
      ),
    type_parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("constraint", $.named_type))),
      ),
    type_argument_list: ($) =>
      seq(
        "<",
        choice($.type, $.void_type),
        repeat(seq(",", choice($.type, $.void_type))),
        ">",
      ),
    generic_type: ($) =>
      prec.dynamic(
        1,
        seq(
          field("name", alias(choice($.identifier, $.qualified_name), $.type_identifier)),
          field("arguments", $.type_argument_list),
        ),
      ),
    _expression_generic_type: ($) =>
      prec(
        PREC.member + 1,
        seq(
          field("name", alias(choice($.identifier, $.qualified_name), $.type_identifier)),
          field("arguments", alias($._expression_type_argument_list, $.type_argument_list)),
        ),
      ),
    _expression_qualified_generic_type: ($) =>
      prec.left(
        PREC.member + 3,
        seq(
          field("owner", alias($._expression_generic_type, $.generic_type)),
          repeat1(
            seq(
              ".",
              field(
                "member",
                choice(
                  alias($.identifier, $.type_identifier),
                  alias($._expression_generic_type_segment, $.generic_type_segment),
                ),
              ),
            ),
          ),
        ),
      ),
    named_type: ($) =>
      choice(
        alias(choice($.identifier, $.qualified_name), $.type_identifier),
        $.generic_type,
        $.qualified_generic_type,
      ),
    function_type: ($) =>
      seq(
        "func",
        "(",
        optional(seq($.function_type_parameter, repeat(seq(",", $.function_type_parameter)))),
        ")",
        optional(choice($.void_type, $.type)),
      ),
    function_type_parameter: ($) =>
      seq(
        optional(choice(field("read_reference", "@"), field("mutable_reference", "&"))),
        field("type", $.type),
      ),
    borrowed_return_type: ($) =>
      seq(
        field("mode", choice("@", "&")),
        optional(seq(field("provenance", choice($.identifier, $.self_expression)), ":")),
        field("target", $.type),
      ),
    optional_type: ($) =>
      prec.left(
        seq(
          field(
            "contained",
            choice($.builtin_type, $.named_type, $.function_type, $.grouped_type, $.array_type, $.view_type, $.optional_type),
          ),
          "?",
        ),
      ),
    array_type: ($) =>
      prec.left(
        seq(
          field("element", choice($.builtin_type, $.named_type, $.function_type, $.grouped_type, $.optional_type)),
          repeat1(choice(seq("[", "]"), seq("[", field("length", $.integer_literal), "]"))),
        ),
      ),
    type: ($) => choice($.optional_type, $.array_type, $.view_type, $.tuple_type, $.grouped_type, $.function_type, $.builtin_type, $.named_type),
    parameter_list: ($) =>
      seq("(", optional(seq($.parameter, repeat(seq(",", $.parameter)))), ")"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        optional(choice(field("read_reference", "@"), field("mutable_reference", "&"))),
        field("type", $.type),
        optional(seq("=", field("default", $.expression))),
      ),

    block: ($) => seq("{", repeat($.statement), "}"),

    statement: ($) =>
      choice(
        seq(
          choice(
            $.variable_declaration,
            $.assignment_statement,
            $.update_statement,
            $.print_statement,
            $.assert_statement,
            $.panic_statement,
            $.return_statement,
            $.break_statement,
            $.continue_statement,
            $.expression_statement,
          ),
          choice(";", $._automatic_semicolon),
        ),
        $.if_statement,
        $.while_statement,
        $.mutex_statement,
        $.anonymous_scope,
        $.for_statement,
        $.match_expression,
      ),

    variable_declaration: ($) =>
      seq(
        field("mutability", choice("let", "var")),
        choice(
          seq(
            field("name", $.identifier),
            choice(
              seq($.type_annotation, optional(seq("=", field("initializer", $.expression)))),
              seq("=", field("initializer", $.expression)),
            ),
          ),
          seq(field("bindings", $.tuple_binding_pattern), "=", field("initializer", $.expression)),
        ),
      ),

    type_annotation: ($) => seq(":", field("type", choice($.reference_type, $.type))),

    assignment_statement: ($) =>
      seq(
        field("left", choice($.identifier, $.member_expression, $.safe_member_expression, $.index_expression)),
        field("operator", choice("=", "+=", "-=", "*=", "/=", "%=")),
        field("right", $.expression),
      ),

    print_statement: ($) =>
      seq(
        field("function", alias("print", $.identifier)),
        "(",
        field("argument", $.expression),
        repeat(seq(",", field("argument", $.expression))),
        ")",
      ),

    assert_statement: ($) =>
      seq(
        field("function", alias("assert", $.identifier)),
        "(",
        field("condition", $.expression),
        optional(seq(",", field("message", $.expression))),
        ")",
      ),

    return_statement: ($) => seq("return", optional(field("value", $.expression))),

    expression_statement: ($) =>
      choice(
        $.try_expression,
        $.invocation_expression,
        $.super_method_expression,
        $.safe_member_expression,
        $.cascade_expression,
      ),

    if_statement: ($) =>
      seq(
        "if",
        field("condition", $._condition_header),
        field("body", $.block),
        repeat(field("branch", $.alternative_branch)),
        optional(seq("else", field("alternative", $.block))),
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $._condition_header),
        field("body", $.block),
      ),

    anonymous_scope: ($) => field("body", $.block),

    _condition_header: ($) =>
      choice($.expression, $.conditional_binding, seq("(", $.conditional_binding, ")")),

    for_statement: ($) =>
      seq(
        "for",
        choice($._for_binding, seq("(", $._for_binding, ")")),
        field("body", $.block),
      ),

    _for_binding: ($) =>
      choice(
        seq(
          field("index", $.identifier),
          ",",
          optional(field("mutability", choice("let", "var"))),
          field("name", $.identifier),
          "in",
          field("iterable", $.expression),
        ),
        seq(
          optional(field("mutability", choice("let", "var"))),
          field("name", $.identifier),
          "in",
          field("iterable", choice($.integer_range, $.expression)),
        ),
        seq(
          field("bindings", $.tuple_binding_pattern),
          "in",
          field("iterable", $.expression),
        ),
      ),

    integer_range: ($) =>
      choice(
        seq(
          field("start", $.expression),
          field("operator", "..."),
          field("end", $.expression),
        ),
        seq(
          "range",
          "(",
          field("start", $.expression),
          ",",
          field("end", $.expression),
          ")",
        ),
      ),

    break_statement: (_) => "break",

    continue_statement: (_) => "continue",

    expression: ($) =>
      choice(
        $.binary_expression,
        $.try_expression,
        $.copy_expression,
        $.move_expression,
        $.read_reference_expression,
        $.unary_expression,
        $.forced_optional_expression,
        $.mutable_reference_expression,
        $.conversion_expression,
        $.lambda_expression,
        $.match_expression,
        $.invocation_expression,
        $.super_method_expression,
        $.cascade_expression,
        $.sequence_literal,
        $.tuple_expression,
        $.member_expression,
        $.safe_member_expression,
        $.index_expression,
        $.slice_expression,
        $.parenthesized_expression,
        $.string_literal,
        $.float_literal,
        $.integer_literal,
        $.boolean_literal,
        $.null_literal,
        $.self_expression,
        $.identifier,
      ),

    match_expression: ($) =>
      seq(
        "match",
        field("subject", $.expression),
        "{",
        repeat1($.match_branch),
        "}",
      ),

    match_branch: ($) =>
      seq(
        choice(
          seq(
            field("variant", $._contextual_variant_name),
            optional(field("bindings", $.match_binding_list)),
          ),
          field("default", "else"),
        ),
        optional(field("guard", seq("if", $.expression))),
        "=>",
        field(
          "body",
          choice(
            seq($.block, optional(choice(";", $._automatic_semicolon))),
            seq($.expression, choice(";", $._automatic_semicolon)),
          ),
        ),
      ),

    match_binding_list: ($) =>
      seq("(", $.match_binding, repeat(seq(",", $.match_binding)), ")"),

    match_binding: ($) =>
      choice(
        $.ignored_match_binding,
        seq(
          optional(field("mutability", choice("let", "var"))),
          field("name", $.identifier),
        ),
      ),
