test/corpus/fields.txt
================
Field mutability
================

struct State {
    let id:int
    var count:int
    private var secret:int
    public static var instances:int
}

class User {
    private let id:int
    public var name:str
    protected let generation:int = 1
}

struct Temperature {
    var raw:int
    var celsius:int = 0 {
        get { return self.raw }
        set(value) { self.raw = value }
    }

    var fahrenheit:int = 32 {
        get { return self.fahrenheit }
    }
}

---

(source_file
  (structure_definition
    (identifier)
    (structure_field
      (identifier)
      (type
        (builtin_type)))
    (structure_field
      (identifier)
      (type
        (builtin_type)))
    (structure_field
      (identifier)
      (type
        (builtin_type)))
    (structure_field
      (identifier)
      (type
        (builtin_type))))
  (structure_definition
    (identifier)
    (structure_field
      (identifier)
      (type
        (builtin_type)))
    (structure_field
      (identifier)
      (type
        (builtin_type)))
    (structure_field
      (identifier)
      (type
        (builtin_type))
      (expression
        (integer_literal))))
  (structure_definition
    (identifier)
    (structure_field
      (identifier)
      (type
        (builtin_type)))
    (structure_field
      (identifier)
      (type
        (builtin_type))
      (expression
        (integer_literal))
      (property_accessor_block
        (property_getter
          (block
            (statement
              (return_statement
                (expression
                  (member_expression
                    (self_expression)
                    (identifier)))))))
        (property_setter
          (identifier)
          (block
            (statement
              (assignment_statement
                (member_expression
                  (self_expression)
                  (identifier))
                (expression
                  (identifier))))))))
    (structure_field
      (identifier)
      (type
        (builtin_type))
      (expression
        (integer_literal))
      (property_accessor_block
        (property_getter
          (block
            (statement
              (return_statement
                (expression
                  (member_expression
                    (self_expression)
                    (identifier)))))))))))
